--- a/www/index.html
+++ b/www/index.html
@@ -7,5 +7,12 @@
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script src="./bootstrap.js"></script>
+    <div id="content" style="display:inline-block;width:600">
+      <div style="font: bold 18px sans-serif">
+        <span id="score_left" style="float:left">0</span>
+        <span id="score_right" style="float:right">0</span>
+      </div>
+      <canvas id="canvas" width="600" height="600"></canvas>
+    </div>
   </body>
 </html>
